@@ -34,6 +34,7 @@ Bugfixes:
 * Fix issue of importing keys into kasp leaving random strings in the 
   retire date.
 * Fix KSK rollover logic to be proper DoubleDNSKEY
+* Fix issue with reading repositories from conf.xml
 
 
 OpenDNSSEC 1.0.0 - 2010-02-09
